Fix spacing on news cards in Latest News and increase font size of welcome message on first hero slide

--- a/global.css
+++ b/global.css
@@ -37,10 +37,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    overflow:overlay;
-}
-
 label {
     padding: 0;
 }
